--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "debug": "^3.1.0",
+    "license-checker": "^25.0.1",
     "mkdirp": "^0.5.1",
     "nopt": "^4.0.1",
     "read-installed": "~4.0.3",
